[tool.poetry]
name = "mongofrog"
version = "0.1.0"
description = ""
authors = ["Andrew Magee <amagee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^2.3.0"
urwid = "^2.1.2"
blessed = "^1.17.11"

[tool.poetry.dev-dependencies]
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
